# gstreamer_101

./: .gitignore
cmake_build_system/: CMakeLists.txt  README.md
cmake_build_system/lib/: CMakeLists.txt
cmake_build_system/lib/libgst/: CMakeLists.txt  libgst.c  libgst.pc.in
cmake_build_system/src/: CMakeLists.txt  main.c
meson_build_system/: README.md  meson.build
meson_build_system/lib/: meson.build
meson_build_system/lib/libgst/: meson.build
meson_build_system/src/: meson.build
